# mimuw-algorithms

./: CMakeLists.txt
exams/2009/: jedynki.cpp
exams/2010/: roznica.cpp
exams/2015/: parking.cpp
exams/2016p/: estetyczne.cpp
exams/2017/: podciagi_rosnace.cpp
exams/2017p/: suma_kwadratow.cpp
exams/2018/: perly.cpp
exams/2019/: projekty.cpp
exams/2019p/: podzielnosc.cpp
exams/2020/: trojki.cpp
exams/2020p/: ciag.cpp
exams/2021/: przedzialy.cpp
exams/2021p/: urozmaicone.cpp
exams/2022/: odwracanie.cpp
exams/2023/: gielda.cpp  marszruta.cpp
graded/graded1/: komitet.cpp  script.sh  test1.in  test2.in  test3.in  test4.in  test5.in  test6.in  test7.in  test8.in
graded/graded2/: choinka.cpp
labs/lab01/: bazarek.cpp  matryca.cpp
labs/lab02/: sortowanie.cpp
labs/lab03/: mecze.cpp
labs/lab04/: gen_perm.py  kin_dp.cpp  kin_segtree.cpp
labs/lab05/: malowanie.cpp
labs/lab06/: dyn_splay.cpp  dyn_vector.cpp  gen_test.py  mytest.in  mytest_vector.out
labs/lab07/: projekty.cpp
labs/lab08/: kapitan.cpp
labs/lab09/: park.cpp
labs/lab10/: lex.cpp
